fix(): Update dark mode colors

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,26 +82,26 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66, 140, 255;
+    --ion-color-primary: #52b3bd;
+    --ion-color-primary-rgb: 82, 179, 189;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255, 255, 255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-shade: #489ea6;
+    --ion-color-primary-tint: #63bbc4;
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80, 200, 255;
+    --ion-color-secondary: #f09b83;
+    --ion-color-secondary-rgb: 240, 155, 131;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+    --ion-color-secondary-shade: #d38873;
+    --ion-color-secondary-tint: #f2a58f;
 
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106, 100, 255;
+    --ion-color-tertiary: #d75f8d;
+    --ion-color-tertiary-rgb: 215, 95, 141;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
+    --ion-color-tertiary-shade: #bd547c;
+    --ion-color-tertiary-tint: #db6f98;
 
     --ion-color-success: #2fdf75;
     --ion-color-success-rgb: 47, 223, 117;
